# big_int

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  big_int.cpp  big_int.hpp  build_linux.sh  build_mingw.bat  build_vs.bat  force_assert.hpp  readme.md  remove_spaces.py  tester.cpp
.github/workflows/: tester.yml
docs/: 01_add_1.cpp  02_add_2.cpp  03_mul_1.cpp  04_mul_2.cpp  05_sub_1.cpp  06_sub_2.cpp  07_div_1.cpp  08_div_2.cpp  1_basics.md  1_basics_add_1.cpp  1_basics_add_2.cpp  1_basics_div.cpp  1_basics_mul_1.cpp  1_basics_mul_2.cpp  1_basics_sub_1.cpp  1_basics_sub_2.cpp  2_div_len.cpp  2_div_len.md  3_brute_force_div.md  3_brute_force_div_1.cpp  3_brute_force_div_2.cpp  4_long_div.md  4_long_div_1.cpp  4_long_div_2.cpp  4_long_div_3.cpp  4_long_div_4.cpp  4_long_div_5.cpp  libs.md  markdown.md  names.md  tutorial.md
lib/: dv_big_int.cpp  dv_big_int.hpp
tester/: tester.cpp
